--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Office Timer</string>
+    <string name="app_name">Sitting Up</string>
     <string name="action_settings">Settings</string>
 
     <!-- messages -->
-    <string name="messages_starting">Good luck!</string>
-    <string name="messages_middle">Half way there!</string>
+    <string name="messages_starting">Sitting and working!</string>
+    <string name="messages_middle">Don\'t mind me</string>
     <string name="messages_end">Almost there!</string>
 
     <!-- movement -->
@@ -13,8 +13,8 @@
 
     <!-- motivation -->
     <string name="motivation_message_1">Great that you are here!</string>
-    <string name="motivation_message_2">Ready for some sitting?</string>
-    <string name="motivation_message_3">Lot of work, eh?</string>
+    <string name="motivation_message_2">Difficult stuff</string>
+    <string name="motivation_message_3">Getting serious</string>
 
     <!-- hints -->
     <string name="messages_hint_1">Hint: A (too) small walk won\'t reset the timer</string>
