--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,15 @@
     <string name="notification_blue">Timer is running!</string>
 
     <!-- tutorial -->
-    <string name="tutorial_main_time_text">Welcome ! This will be the time that the timer uses for the countdown.</string>
+    <string name="tutorial_start">Welcome ! This is a small tutorial to guide you through the app.</string>
+    <string name="tutorial_main_time_text">This will be the time that the timer uses for the countdown.</string>
     <string name="tutorial_main_circle">You can adjust the time by dragging the outer circle.</string>
     <string name="tutorial_start_button">Click here, when you are ready to sit!</string>
     <string name="tutorial_timer_time_text">You will receive a notification when this timer hits 0.</string>
     <string name="tutorial_timer_circle">Notice here that we know when you are walking! We will freeze the timer if you are walking and we will reset it again once you are seated again.</string>
-    <string name="tutorial_stop_button">Click here, when you are ready to stop. This was also the end of the tutorial ! Have Fun !</string>
+    <string name="tutorial_timer_circle_2">Be sure to enable the movement sensors in the settings.</string>
+    <string name="tutorial_stop_button">Click here, when you are ready to stop.</string>
+    <string name="tutorial_end">That was it ! Good luck !</string>
 
     <!-- misc -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
