--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="tutorial_main_circle">You can adjust the time by dragging the outer circle.</string>
     <string name="tutorial_start_button">Click here, when you are ready to sit!</string>
     <string name="tutorial_timer_time_text">You will receive a notification when this timer hits 0.</string>
-    <string name="tutorial_timer_circle">We know when you are walking! You can also notice this on how the image looks like.</string>
-    <string name="tutorial_timer_circle_2">We will freeze the timer if you are walking and we will reset it once you are seated again.</string>
+    <string name="tutorial_timer_circle">The sensors will detect when you are walking. The image will also show this.</string>
+    <string name="tutorial_timer_circle_2">The timer will freeze when you start walking and it will reset once you are seated again.</string>
     <string name="tutorial_timer_circle_3">Be sure to enable the movement sensors in the settings.</string>
     <string name="tutorial_stop_button">Click here, when you are ready to stop.</string>
     <string name="tutorial_end">The timer will also run when the app is closed ! That was it ! Good luck !</string>
