made a working copy to select your own tone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="vibrate">Vibration</string>
     <string name="led_light">LED Light</string>
     <string name="sound">Sound</string>
+    <string name="tone">Tone</string>
 
     <!-- help -->
     <string name="support">Support</string>
@@ -43,6 +44,7 @@
 
     <!-- misc -->
     <string name="banner_ad_unit_id">ca-app-pub-4050305580977890/4443389163</string>
+
 
 
 </resources>
